now cleaning up the files

--- a/views/pathfinding.erb
+++ b/views/pathfinding.erb
@@ -33,9 +33,9 @@
 
 <div class="col-md-8 col-md-offset-2">
   <h4> Method Signature </h4>
-  <strong>Javascript</strong> <em>romeoAndJuliet(n, m, matrix, x1, y1, x2, y2)</em>
+  <strong>Javascript</strong> <em>pathfinder(n, m, matrix, x1, y1, x2, y2)</em>
   <br>
-  <strong>Ruby</strong> <em>RomeoAndJuliet.new(n, m, matrix, x1, x2, y2)</em>
+  <strong>Ruby</strong> <em>Pathfinder.new(n, m, matrix, x1, x2, y2).solve</em>
 </div>
 
 <div class="col-md-8 col-md-offset-2">
